# diamond-girl

./: CREDITS  Changelog  Makefile.am  Makefile.in  README  README.building  README.md  README.sfx  README.translations  README.users  aclocal.m4  config.h.in  configure  configure.ac  diamond-girl-win32.nsi  diamond-girl.6  diamond-girl.desktop  translate-map-fi.sed  translate-map-fr.sed  translate-unmap-fi.sed  translate-unmap-fr.sed  translate.sh
blender-py/: export.py  extract_materials.py  render.py  treasure-images.py  treasure-models.py
data/: Makefile.am  Makefile.in  Welcome-en.txt  Welcome-fi.txt  Welcome-fr.txt  Welcome.txt  game-help-fr.txt  game-help.txt  theme-en.txt  theme-fr.txt  title-classic_hints-fi.txt  title-classic_hints-fr.txt  title-classic_hints.txt  title-help-fi.txt  title-help-fr.txt  title-help.txt  title-misc1-fr.txt  title-misc1.txt  title-misc2-fr.txt  title-misc2.txt  title-pyjama_party_help-fi.txt  title-pyjama_party_help-fr.txt  title-pyjama_party_help.txt  title-pyjama_party_hints-fi.txt  title-pyjama_party_hints-fr.txt  title-pyjama_party_hints.txt  title-welcome-fi.txt  title-welcome-fr.txt  title-welcome.txt  trait-adventure_mode-en.txt  trait-adventure_mode-fi.txt  trait-adventure_mode-fr.txt  trait-chaos-en.txt  trait-chaos-fi.txt  trait-chaos-fr.txt  trait-diamond_push-fi.txt  trait-diamond_push-fr.txt  trait-diamond_push.txt  trait-dynamite-fi.txt  trait-dynamite-fr.txt  (+48 more)
m4/: ChangeLog
maps/: Makefile.am  Makefile.in
maps/a/: 1  10  11  12  13  14  15  16  17  18  19  2  20  21  22  23  24  25  26  27  28  29  3  30  31  32  33  4  5  6  7  8  9  Makefile.am
maps/beginners_cave/: 1  10  2  3  4  5  6  7  8  9  Makefile.am
maps/random/: 100  Makefile.am
maps/well/: 1  Makefile.am
pcg/: pcg32.c
po/: LINGUAS  Makevars  POTFILES.in  diamond-girl.pot  en@boldquot.gmo  en@boldquot.po  en@quot.gmo  en@quot.po  fi.gmo  fi.po  fr.po
src/: Makefile.am  Makefile.in  ai.h  ai_brains.c  ai_diamond_hunter.c  ai_free.c  ai_get_next_target.c  ai_get_possible_moves.c  ai_is_passable.c  ai_new.c  ai_plan_level.c  ai_playback.c  ai_pyjama_party.c  ai_set_engine_name.c  backtrace.h  bundled_mtwist.c  cave.h  cave_cleanup.c  cave_displayname.c  cave_filename.c  cave_get.c  cave_load.c  cave_save.c  check_installation.c  clear_area.c  diamond_girl.h  draw_legend.c  draw_map.c  draw_map_borders.c  draw_title_logo.c  draw_title_starfield.c  editor.c  event.c  event.h  font.c  font.h  font_open.c  free_cave_names.c  game.c  game.h  (+268 more)
tests/: Makefile.am  Makefile.in  bundled_mtwist.c  random.c
themes/: Makefile.am  Makefile.in  easter.config  halloween.config  iron-girl.config  new-year.config  x-mas.config
themes/default/: Makefile.am  Makefile.in
themes/default/gfx/: Makefile.am  Makefile.in  ameba.png.cnf  bookpile.blend  buttons-16x16.xcf  buttons-40x40.xcf  cafe.blend  desktop-icon.xcf  diary.blend  empty.png.cnf  enemy1.png.cnf  enemy2.png.cnf  extra_life_anim.png.cnf  fog_linear.frag  font-en.txt  font-fi.txt  font-fr.txt  font.xcf  footer.frag  game_score.xcf  glyphs-24x24.xcf  gravestone.blend  header.frag  intermission.xcf  light_directional.frag  light_positional.frag  light_positional_add.frag  light_positional_mul.frag  logo.3ds  logo.blend  logo.xcf  logo_texture.xcf  main.vert  map_cursor.xcf  notes.blend  player-3.png.cnf  smoke.png.cnf  texture.frag  treasures.blend  zombie.blend
themes/default/sfx/: Makefile.am  Makefile.in  ameba.sfx  boulder_fall.sfx  boulder_move.sfx  collect_treasure.sfx  diamond_collect.sfx  diamond_fall.sfx  enter_exit.sfx  explosion.sfx  intro.sfx  move_empty.sfx  move_sand.sfx  noiseless_explosion.sfx  small_explosion.sfx  start.xm  time.sfx  title.xm
themes/easter/: Makefile.in
themes/easter/gfx/: Makefile.am  Makefile.in  glyphs-24x24.xcf
themes/easter/sfx/: Makefile.am  Makefile.in  diamond_fall.sfx
themes/halloween/: Makefile.in
themes/halloween/gfx/: Makefile.am  Makefile.in  glyphs-24x24.xcf
themes/halloween/sfx/: Makefile.am  Makefile.in
themes/iron-girl/: Makefile.am  Makefile.in
themes/iron-girl/gfx/: Makefile.am  Makefile.in  glyphs-24x24.xcf
themes/new-year/: Makefile.in
themes/new-year/gfx/: Makefile.am  Makefile.in  extra_life_anim.png.cnf  glyphs-24x24.xcf
themes/new-year/sfx/: Makefile.am  Makefile.in
themes/x-mas/: Makefile.in
themes/x-mas/gfx/: Makefile.am  Makefile.in  glyphs-24x24.xcf
ui/: Makefile.am  Makefile.in  game_player_death.js  game_player_death.json  game_player_next_level.js  game_player_next_level.json  game_pyjama_party_ask_next.js  game_pyjama_party_ask_next.json  game_pyjama_party_level_completed.js  game_pyjama_party_level_completed.json  playtesting_results.js  settings.js  settings.json  title_classic.js  title_common.js  title_common.json  title_pyjama_party.json
