if WITH_BUNDLED_MTWIST
   WBM_CFLAGS = -DWITH_BUNDLED_MTWIST
endif

if WITH_CHECKSUMMING
CHECKSUMMING_CFLAGS = -DWITH_CHECKSUMMING -DCHECKSUMMING_LIBRARY_MHASH=@CHECKSUMMING_LIBRARY_MHASH@ -DCHECKSUMMING_LIBRARY_CRYPTO=@CHECKSUMMING_LIBRARY_CRYPTO@
else
CHECKSUMMING_CFLAGS =
endif

AM_CFLAGS = $(CWARNFLAGS) $(WBM_CFLAGS) $(mtwist_CFLAGS) $(CHECKSUMMING_CFLAGS) $(sdl_CFLAGS)

noinst_PROGRAMS = random

random_SOURCES = random.c bundled_mtwist.c

random_LDADD = $(mtwist_LIBS) $(sdl_LIBS) $(libcrypto_LIBS)

