
sfxdir = $(pkgdatadir)/themes/default/sfx

sfx_DATA = ameba.sfx boulder_fall.sfx boulder_move.sfx diamond_collect.sfx diamond_fall.sfx enter_exit.sfx explosion.sfx move_empty.sfx move_sand.sfx small_explosion.sfx time.sfx start.xm title.xm 

EXTRA_DIST = ameba.sfx boulder_fall.sfx boulder_move.sfx diamond_collect.sfx diamond_fall.sfx enter_exit.sfx explosion.sfx move_empty.sfx move_sand.sfx small_explosion.sfx time.sfx start.xm title.xm 

